--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-VITE_TELEGRAM_BOT_TOKEN=123456789:your_bot_token_here
-VITE_TELEGRAM_CHAT_ID=123456789
+NEXT_PUBLIC_TELEGRAM_BOT_TOKEN=123456789:your_bot_token_here
+NEXT_PUBLIC_TELEGRAM_CHAT_ID=123456789
+NEXT_PUBLIC_SITE_URL=https://your-domain.com
