--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_TELEGRAM_BOT_TOKEN=123456789:your_bot_token_here
 NEXT_PUBLIC_TELEGRAM_CHAT_ID=123456789
-NEXT_PUBLIC_SITE_URL=https://your-domain.com
-SITE_URL=https://your-domain.com
+NEXT_PUBLIC_SITE_URL=https://elyorjon.uz
+SITE_URL=https://elyorjon.uz
 GOOGLE_SITE_VERIFICATION=your-google-verification-code
 NEXT_PUBLIC_COUNTAPI_NAMESPACE=elyor-tuyliyev-portfolio
