--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ NEXT_PUBLIC_TELEGRAM_CHAT_ID=123456789
 NEXT_PUBLIC_SITE_URL=https://elyorjon.uz
 SITE_URL=https://elyorjon.uz
 GOOGLE_SITE_VERIFICATION=your-google-verification-code
+COUNTAPI_NAMESPACE=elyor-tuyliyev-portfolio
 NEXT_PUBLIC_COUNTAPI_NAMESPACE=elyor-tuyliyev-portfolio
